@@ -1,5 +1,8 @@
 *** 0.2.2 ****
 
+	* bin/cygport.in (pkg_pkgcheck):
+	Properly check where there are both missing and duplicate files.
+
 	* bin/cygport.in (src_test, pkg_diff):
 	Support GNUmakefile.{am,in} files.
 
